kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/invalid/008_testRequiresColliding/008_testRequiresCollidingC.kmt
package root_package;

require "kermeta"
class Titi
{
	operation main() : Void is
		do
			result := void
		end

}
